--- a/GarageASP.NetMVC/Views/Voitures/Index.cshtml
+++ b/GarageASP.NetMVC/Views/Voitures/Index.cshtml
@@ -3,7 +3,7 @@
 <section class="py-5 text-center container">
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light">Mes voitures</h1>
+            <h1 class="fw-light">Dashboard voitures</h1>
             <p class="lead text-body-secondary">Application de gestion de voiture pour garagiste.</p>
             <p>
                 <a href="#" class="btn btn-primary my-2">Ajouter une nouvelle voiture</a>
@@ -12,31 +12,34 @@
     </div>
 </section>
 
-<div class="album py-5 bg-body-tertiary">
-    <div class="container">
 
-        <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-            @foreach (var item in Model)
-            {
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c" /><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
-                        <div class="card-body">
-                            <p class="card-text">@item.Marque</p>
-                            <p class="card-text">@item.Modele</p>
-                            <p class="card-text">@item.Immatriculation</p>
-                            <div class="d-flex justify-content-between align-items-center">
-                                <div class="btn-group">
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Edit</button>
-                                    <button type="button" class="btn btn-sm btn-outline-secondary">Delete</button>
-                                </div>
-                               
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            }
-        </div>
-    </div>
+<div class=" container">
+    <h2 class="fw-light py-4 text-center">Voitures recus</h2>
 </div>
+<table class="table table-hover table-striped">
+    <thead>
+        <tr>
+            <th scope="col">Immatriculation</th>
+            <th scope="col">Marque</th>
+            <th scope="col">Modele</th>
+            <th scope="col">Etat</th>
+            <th scope="col"></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <th scope="row">@item.Immatriculation</th>
+                <td>@item.Marque</td>
+                <td>@item.Modele</td>
+                <td>@item.Etat</td>
+                <td>
+                    <a type="btn btn-success" asp-controller="Contact" asp-action="About" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-outline-secondary">View</a>
+                    <a type="btn btn-success" asp-controller="Contact" asp-action="Edit" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-outline-secondary">Edit</a>
+                    <a type="btn btn-success" asp-controller="Contact" asp-action="Delete" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-danger ">Delete</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
