Ajouter une voiture au dashboard

--- a/GarageASP.NetMVC/Views/Voitures/Index.cshtml
+++ b/GarageASP.NetMVC/Views/Voitures/Index.cshtml
@@ -6,7 +6,7 @@
             <h1 class="fw-light">Dashboard voitures</h1>
             <p class="lead text-body-secondary">Application de gestion de voiture pour garagiste.</p>
             <p>
-                <a href="#" class="btn btn-primary my-2">Ajouter une nouvelle voiture</a>
+                <a asp-controller="Voitures" asp-action="AddVoiture" class="btn btn-primary my-2">Ajouter une nouvelle voiture</a>
             </p>
         </div>
     </div>
