Format de l'ID immatriculation

--- a/GarageASP.NetMVC/Views/Voitures/Index.cshtml
+++ b/GarageASP.NetMVC/Views/Voitures/Index.cshtml
@@ -3,7 +3,7 @@
 <section class="py-5 text-center container">
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light">Dashboard voitures</h1>
+            <h1 class="fw-light">Mon Dashboard</h1>
             <p class="lead text-body-secondary">Application de gestion de voiture pour garagiste.</p>
             <p>
                 <a asp-controller="Voitures" asp-action="AddVoiture" class="btn btn-primary my-2">Ajouter une nouvelle voiture</a>
@@ -14,7 +14,7 @@
 
 
 <div class=" container">
-    <h2 class="fw-light py-4 text-center">Voitures recus</h2>
+    <h2 class="fw-light py-4 text-center">Voitures recues</h2>
 </div>
 <table class="table table-hover table-striped">
     <thead>
