--- a/GarageASP.NetMVC/Views/Car/Index.cshtml
+++ b/GarageASP.NetMVC/Views/Car/Index.cshtml
@@ -35,7 +35,7 @@
                 <td>@item.Modele</td>
                 <td>@item.Etat</td>
                 <td>
-                    <a type="btn btn-success" asp-controller="Car" asp-action="About" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-outline-secondary">View</a>
+                    <a type="btn btn-success" asp-controller="Car" asp-action="DetailCar" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-outline-secondary">View</a>
                     <a type="btn btn-success" asp-controller="Car" asp-action="EditCar" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-outline-secondary">Edit</a>
                     <a type="btn btn-success" asp-controller="Car" asp-action="Delete" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-danger ">Delete</a>
                 </td>
