--- a/GarageASP.NetMVC/Views/Car/Index.cshtml
+++ b/GarageASP.NetMVC/Views/Car/Index.cshtml
@@ -50,7 +50,7 @@
                 <td>
                     <a type="btn btn-success" asp-controller="Car" asp-action="DetailCar" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-outline-secondary">View</a>
                     <a type="btn btn-success" asp-controller="Car" asp-action="EditCar" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-outline-secondary">Edit</a>
-                    <a type="btn btn-success" asp-controller="Car" asp-action="Delete" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-danger ">Delete</a>
+                    <a type="btn btn-success" asp-controller="Car" asp-action="DeleteCar" asp-route-id="@item.Immatriculation" class="btn btn-sm btn-danger ">Delete</a>
                 </td>
             </tr>
         }
