--- a/GarageASP.NetMVC/Views/Car/DetailCar.cshtml
+++ b/GarageASP.NetMVC/Views/Car/DetailCar.cshtml
@@ -4,8 +4,9 @@
     <div class="row g-0 border rounded overflow-hidden flex-md-row mb-4 shadow-sm h-md-250 position-relative">
         <div class="col p-4 d-flex flex-column position-static">
             <strong class="d-inline-block mb-2 text-primary-emphasis">@Model.Marque @Model.Modele</strong>
-            <h3 class="mb-0">@Model.Immatriculation </h3>
-            
+            <h2 class="mb-0"> @Model.Client.Name @Model.Client.Surname </h2>
+            <h4 class="mb-0">@Model.Immatriculation </h4> 
+            <p class="card-text mb-auto">Mail du client : @Model.Client.Mail</p>
             <p class="card-text mb-auto">@Model.Etat</p>
             
         </div>
