--- a/GarageASP.NetMVC/Views/Car/Index.cshtml
+++ b/GarageASP.NetMVC/Views/Car/Index.cshtml
@@ -19,7 +19,9 @@
 <table class="table table-hover table-striped">
     <thead>
         <tr>
+            
             <th scope="col">Immatriculation</th>
+            <th scope="col">Client</th>
             <th scope="col">Marque</th>
             <th scope="col">Modele</th>
             <th scope="col">Etat</th>
@@ -30,7 +32,9 @@
         @foreach (var item in Model)
         {
             <tr>
+               
                 <th scope="row">@item.Immatriculation</th>
+                <td>@item.Client.Name @item.Client.Surname</td>
                 <td>@item.Marque</td>
                 <td>@item.Modele</td>
                 <td>
