--- a/GarageASP.NetMVC/Views/Car/Index.cshtml
+++ b/GarageASP.NetMVC/Views/Car/Index.cshtml
@@ -3,8 +3,8 @@
 <section class="py-5 text-center container">
     <div class="row py-lg-5">
         <div class="col-lg-6 col-md-8 mx-auto">
-            <h1 class="fw-light">Mon Dashboard</h1>
-            <p class="lead text-body-secondary">Application de gestion de voiture pour garagiste.</p>
+            <h1 class="fw-light">Dashboard Voiture</h1>
+            <p class="lead text-body-secondary">Application de gestion de voiture et clients pour garagiste.</p>
             <p>
                 <a asp-controller="Car" asp-action="AddCar" class="btn btn-primary my-2">Ajouter une nouvelle voiture</a>
             </p>
